--- a/LaboratorioAlexandre/LaboratorioAlexandre.csproj
+++ b/LaboratorioAlexandre/LaboratorioAlexandre.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Models\PlanoSaude.cs" />
     <Compile Include="Models\TipoConveniado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DAO\Conexao.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
