--- a/LaboratorioAlexandre/Web.config
+++ b/LaboratorioAlexandre/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    
+    <add name="ConexaoAtendimentoHospitalar" connectionString="Data Source = LAB04-08 ; Initial Catalog = BD_Laboratorio6; User Id = sa ; Password = uniron$2017" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
