--- a/LaboratorioAlexandre/LaboratorioAlexandre.csproj
+++ b/LaboratorioAlexandre/LaboratorioAlexandre.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Models\PlanoSaude.cs" />
     <Compile Include="Models\TipoConveniado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\DAO\CidadeRepository.cs" />
     <Compile Include="Repository\DAO\Conexao.cs" />
   </ItemGroup>
   <ItemGroup>
